--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,14 @@
 [project]
-name = "mostra-2025"
+name = "mostra-profissoes"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "folium>=0.20.0",
-    "matplotlib>=3.10.6",
-    "networkx>=3.5",
     "numpy>=2.3.3",
-    "osmnx>=2.0.6",
-    "scikit-learn>=1.7.2",
+    "pillow>=11.3.0",
+    "plotly>=6.3.1",
     "streamlit>=1.50.0",
-    "streamlit-folium>=0.25.2",
+    "streamlit-image-coordinates>=0.4.0",
+    "streamlit-plotly-events>=0.0.6",
 ]
